// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progess components basic LineProgress render 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        },
        Object {
          "backgroundColor": "#e6e7ed",
          "height": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
          },
          Object {
            "backgroundColor": "pink",
            "width": "12%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Progess components basic StepsProgress render 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        },
        Object {
          "height": 8,
        },
      ]
    }
  >
    <View
      key="0"
      style={
        Array [
          Object {
            "flex": 1,
            "height": "100%",
            "position": "relative",
          },
          Object {
            "backgroundColor": "pink",
            "marginRight": 3,
          },
        ]
      }
    />
    <View
      key="1"
      style={
        Array [
          Object {
            "flex": 1,
            "height": "100%",
            "position": "relative",
          },
          Object {
            "backgroundColor": "#e6e7ed",
            "marginRight": 3,
          },
        ]
      }
    />
    <View
      key="2"
      style={
        Array [
          Object {
            "flex": 1,
            "height": "100%",
            "position": "relative",
          },
          Object {
            "backgroundColor": "#e6e7ed",
            "marginRight": 3,
          },
        ]
      }
    />
    <View
      key="3"
      style={
        Array [
          Object {
            "flex": 1,
            "height": "100%",
            "position": "relative",
          },
          Object {
            "backgroundColor": "#e6e7ed",
            "marginRight": 3,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Progess components basic render 1`] = `
<View
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }
>
  <Svg
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "height": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
    viewBox="0 0 100 100"
  >
    <Path
      d="M 50,50 m 0,-46 a 46,46 0 1 1 0,92 a 46,46 0 1 1 0,-92"
      fillOpacity="0"
      stroke="#EEF8FF"
      strokeLinecap="round"
      strokeWidth={8}
    />
    <Path
      d="M 50,50 m 0,-46 a 46,46 0 1 1 0,92 a 46,46 0 1 1 0,-92"
      fillOpacity="0"
      stroke="#56C0FF"
      strokeDasharray={
        Array [
          289.02652413026095,
          289.02652413026095,
        ]
      }
      strokeDashoffset={254.34334123462963}
      strokeLinecap="round"
      strokeWidth={8}
    />
  </Svg>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
      ]
    }
  >
    <TYText
      align={null}
      color={null}
      size={null}
      style={
        Object {
          "fontSize": 28,
          "fontWeight": "bold",
        }
      }
      type={null}
      weight={null}
    >
      12
      %
    </TYText>
  </View>
</View>
`;

exports[`Progess components componentWillReceiveProps render 1`] = `
<View
  style={
    Object {
      "height": 60,
      "width": 60,
    }
  }
>
  <Svg
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "height": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
    viewBox="0 0 100 100"
  >
    <Path
      d="M 50,50 m 0,-46 a 46,46 0 1 1 0,92 a 46,46 0 1 1 0,-92"
      fillOpacity="0"
      stroke="#EEF8FF"
      strokeLinecap="round"
      strokeWidth={8}
    />
    <Path
      d="M 50,50 m 0,-46 a 46,46 0 1 1 0,92 a 46,46 0 1 1 0,-92"
      fillOpacity="0"
      stroke="#56C0FF"
      strokeDasharray={
        Array [
          289.02652413026095,
          289.02652413026095,
        ]
      }
      strokeDashoffset={254.34334123462963}
      strokeLinecap="round"
      strokeWidth={8}
    />
  </Svg>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
      ]
    }
  >
    <TYText
      align={null}
      color={null}
      size={null}
      style={
        Object {
          "fontSize": 28,
          "fontWeight": "bold",
        }
      }
      type={null}
      weight={null}
    >
      12
      %
    </TYText>
  </View>
</View>
`;
